--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,9 +1,61 @@
-.container {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0% 20%;
+}
+
+h3 {
+  padding: 1rem;
+}
+
+.input {
+  margin: 5rem;
+  border: 1px solid red;
+}
+
+.swiper-slider {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.swiper-slider .single-slide {
+  position: relative;
+}
+
+.swiper-slider .single-slide p {
+  position: absolute;
+  z-index: 10;
+  left: 50%;
+  bottom: 10%;
+  color: #fff;
+  transform: translate(-50%, 0%);
+  width: 100%;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1rem;
+  height: 30%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+}
+
+.swiper-slider .single-slide .gradient {
+  z-index: 3;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6));
+}
+
+.swiper-slider .single-slide img {
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
 }
 
 .search-bar {
@@ -13,10 +65,6 @@
   border-style: none;
   background-color: lightgray;
   padding: 10px;
-}
-
-.trending-recipes {
-  display: flex;
 }
 
 .recipe-container {
