--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -13,8 +13,35 @@ h3 {
 }
 
 .input {
-  margin: 5rem;
-  border: 1px solid red;
+  margin: 1rem;
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-bar {
+  margin: 30px;
+  width: 100%;
+  max-width: 400px;
+  border-radius: 80px;
+  border-style: none;
+  background-color: rgb(53, 53, 53);
+  color: #fff;
+  padding: 10px;
+}
+::placeholder {
+  color: #fff;
+}
+
+.btn {
+  border-style: none;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  background-color: rgb(53, 53, 53);
+  color: #fff;
+  cursor: pointer;
 }
 
 .swiper-slider {
@@ -58,15 +85,6 @@ h3 {
   object-fit: cover;
 }
 
-.search-bar {
-  margin: 30px;
-  width: 500px;
-  border-radius: 80px;
-  border-style: none;
-  background-color: lightgray;
-  padding: 10px;
-}
-
 .recipe-container {
   display: flex;
   flex-wrap: wrap;
@@ -89,4 +107,38 @@ h3 {
   width: 100%;
   height: auto;
   border-radius: 5px;
+}
+
+/* Recipes page */
+
+.container {
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.recipes-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.recipe-card {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+h1 {
+  margin-top: 10%;
+  padding: 1rem;
+}
+.recipe-card h2 {
+  font-size: 18px;
+  margin: 10px;
+}
+
+.recipe-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
