update recipe page

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -142,3 +142,35 @@ h1 {
   height: 100%;
   object-fit: cover;
 }
+
+/* single card recipe page */
+.card-recipe {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 40px auto; /* Center the card horizontally */
+  margin-bottom: 20px;
+  width: 80%; /* Adjust the width as needed */
+  max-width: 800px; /* Limit the width to prevent it from becoming too wide */
+}
+
+.title-recipe {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.img-recipe {
+  width: 100%;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.summary-recipe {
+  font-size: 1rem;
+}
+
+.summary-recipe a {
+  text-decoration: none;
+  color: inherit;
+}
